--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "handwritten.js": "^18.11.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.6",
-    "nodemailer": "^6.7.7",
-    "nodemon": "^2.0.19"
+    "nodemailer": "^6.7.8",
+    "nodemon": "^2.0.19",
+    "uuid4": "^2.0.3"
   }
 }
